--- a/CSS/media.css
+++ b/CSS/media.css
@@ -155,6 +155,7 @@
         float:none;
         width: 100%;
         margin-top: 50px;
+        
     }
 
     .image-section img{
@@ -255,5 +256,7 @@
 
 }
 
-
+@media(max-width: 600px){
+    
+}
 
