--- a/CSS/about.css
+++ b/CSS/about.css
@@ -62,11 +62,11 @@
 
 /* ||||Restaurant Policy Section */
 
-.content .paragraph{
+.content .about-paragraph{
     float: left;
 }
 
-.content .paragraph p{
+.content .about-paragraph p{
    margin: 20px 150px 0;
    font-size: 16px;
    line-height: 1.5;
@@ -74,11 +74,12 @@
    text-align: justify;
 }
 
-.content .paragraph .embed{
+.content .about-paragraph .embed{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 250px 20px;
+    margin: 20px 250px 20px; 
+    
     width: 500px;
     height: 500px;
 }
@@ -124,5 +125,23 @@ color: #fff;
 background-color: #88941e;
 transform: rotate(360deg);
 }
+
+
+
+
+.progress-bar {
+	position: relative;
+	width: 300px;
+	height: 2rem;
+	border-radius: 1.5rem;
+}
+
+.progress p{
+    color: white;
+}
+
+
+
+
 
 /* |||About Section ends||| */
