--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,9 +38,13 @@ body{
     
 }
 
+.header a{
+    text-decoration: none;
+}
+
  .header img{ 
-    width: 50px;
-     height: 30px;
+    width: 70px;
+     height: 70px;
     float: left;
     cursor: pointer;
     border: 4px solid #d6cadd;
